--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -8,6 +8,8 @@
 @import '../components/Banner/banner';
 @import '../components/Category/category';
 @import '../components/ItemCount/itemCount';
-@import '../components/Card/Card.scss';
+
+@import '../components/ItemList/itemList';
+@import '../components/Item/item';
 
 
