correccion de count

--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -18,7 +18,7 @@
     position: absolute;
     content: '';
     height: 10rem;
-    background: linear-gradient(rgba(0 0 0 / 1)25%, rgba(0 0 0 / 0) 100%);
+    background: linear-gradient(rgba(0 0 0 / 1)30%, rgba(0 0 0 / 0.5)60%, rgba(0 0 0 / 0) 100%);
     width: 100%;
     margin: 0;
     left: 0;
