--- a/src/components/NavBar/_NavBar.scss
+++ b/src/components/NavBar/_NavBar.scss
@@ -1,3 +1,5 @@
+@import '../../scss/base/colors';
+
 body{
     padding: 0;
     margin: 0;
@@ -14,11 +16,10 @@ body{
     overflow: hidden;
   }
   
-  
   #navbar {
     width: 100%;
     height: 60px;
-    background-color: black;
+    background-color: $color-9;
     position: absolute;
     display: flex;
     align-items: center;
@@ -33,7 +34,7 @@ body{
   }
   
   .bubble {
-    background-color: black;
+    background-color: $color-9;
     width: 40px;
     height: 40px;
     bottom: 85px;
@@ -48,6 +49,7 @@ body{
   
   .icon {
     opacity: 0;
+    color:  $color-0;
   }
   
   #bubble1 {
@@ -55,8 +57,9 @@ body{
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
   #bubble1 > span {
-    opacity: 0.7;
-    color: white;
+    opacity: 0.9;
+    color: $color-0;
+    text-decoration: none;
   }
   
   #bgWrapper {
