--- a/src/components/ItemList/_itemList.scss
+++ b/src/components/ItemList/_itemList.scss
@@ -1,3 +1,11 @@
+.containerTitle {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.15rem;
+    text-align: center;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    padding: 1rem;
+}
 .containerProducts {
     display: grid;
     grid-gap: .85rem;
