--- a/src/components/Category/_category.scss
+++ b/src/components/Category/_category.scss
@@ -35,6 +35,7 @@
             color: $color-0;
             overflow: hidden;
             position: relative;
+            box-shadow: 1px 1px 6px 1px rgba(0, 0, 0, 0.2);
 
             &:active {
                 transform: scale(0.95);
