--- a/src/components/NavBar/_NavBar.scss
+++ b/src/components/NavBar/_NavBar.scss
@@ -9,7 +9,7 @@ body{
     width: 100%;
     bottom: 0;
     height: 68px;
-    background-color: white;
+    // background-color: white;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
@@ -71,7 +71,7 @@ body{
   }
   
   #bg {
-    background: white;
+    background: $color-0 ;
     width: 120%;
     height: 100%;
     margin-left: -10%;
@@ -79,7 +79,7 @@ body{
   
   #bgBubble {
     position: absolute;
-    background-color: white;
+    background-color: $color-0 ;
     width: 60px;
     height: 60px;
     border-radius: 50%;
