desafio consumiendo apis

--- a/src/components/ItemList/_itemList.scss
+++ b/src/components/ItemList/_itemList.scss
@@ -13,3 +13,6 @@
     grid-auto-rows:max-content;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 }
+.itemLink {
+    text-decoration: none;
+}
