--- a/src/components/Item/_item.scss
+++ b/src/components/Item/_item.scss
@@ -1,3 +1,9 @@
+$font-size: 0.85rem;
+$line-height: 1.5;
+$lines: 2;
+
+
+
 .cardProduct {
     border-radius: 7px;
     background: #fff5ea7a;
@@ -5,7 +11,7 @@
     overflow: hidden;
     box-shadow: .5px .5px 5px .5px rgba(0, 0, 0, 0.2);
     min-height: 7rem;
-    max-height: 8rem;
+    max-height: 7rem;
     
     .imageProduct {
         overflow: hidden;
@@ -13,9 +19,9 @@
         justify-content: center;
         align-items: flex-start;
         padding: 0;
-        min-height: max-content;
-        max-height: 8rem;
-
+        min-height: 7rem;
+        max-height: 7rem;
+        
         img {
             width: 100%;
         }
@@ -24,24 +30,32 @@
         padding: .5rem;
         display: grid;
         grid-template-rows: subgrid ;
-        grid-row: 3 ;
+        grid-row: 4 ;
 
 
         .cardTitle {
-            font-size: .85rem;
-            margin-bottom: 0;
-            text-overflow: ellipsis;
-            white-space: nowrap;
+            display: block;
+            display: -webkit-box;
+            height: $font-size * $line-height * $lines;
+            font-size: $font-size;
+            line-height: $line-height;
+            -webkit-line-clamp: $lines;
+            -webkit-box-orient: vertical;
             overflow: hidden;
+            text-overflow: ellipsis;
+            margin: 0;
     
         }
         .cardCategory {
             font-weight: bold;
-            font-size: .75rem;
+            font-size: $font-size;
             color: rgba( #000000, 0.5);
+            margin: 0;
         }
         .cardPrice {
             font-size: 1.25rem;
+            color: rgb(70, 129, 255);
+            margin: 0;
         }
     }
 
