--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -10,6 +10,25 @@
     overflow: hidden;
     position: relative;
     padding: 0;
+
+    .carousel-indicators {
+        margin-bottom: .25rem;
+
+        button {
+            width: 5px;
+            height:5px;
+            border-radius: 100px;
+            border: none,
+        }
+    }
+    .carousel-control-next-icon, .carousel-control-prev-icon{
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .captionC {
+        top:0;
+    }
 }
 .greeting {
     position: relative;
@@ -41,4 +60,21 @@
     font-size: 10rem;
     color: rgba(255 255 255 / 0.1);
     margin: 0;
+}
+
+.bannerImg {
+    min-height: 10rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        width: 110%;
+    }
+
+    h3, p {
+        margin: 0;
+        color: black;
+    }
 }
