--- a/src/components/ItemDetail/_itemDetail.scss
+++ b/src/components/ItemDetail/_itemDetail.scss
@@ -2,8 +2,8 @@
     border-radius: 7px;
     overflow: hidden;
     border-radius: 7px;
-    background: rgba($color-2, 0.2);
-    backdrop-filter: blur(5px);
+    background: rgba($color-1, 1);
+    // backdrop-filter: blur(5px);
 
     .imgViewP {
         overflow: hidden;
