--- a/src/components/Item/_item.scss
+++ b/src/components/Item/_item.scss
@@ -12,6 +12,11 @@ $lines: 2;
     box-shadow: .5px .5px 5px .5px rgba(0, 0, 0, 0.2);
     min-height: 7rem;
     max-height: 7rem;
+
+    @media only screen and (min-width: 992px) {
+        min-height: 20rem;
+        max-height: 20rem;
+    }
     
     .imageProduct {
         overflow: hidden;
@@ -21,6 +26,11 @@ $lines: 2;
         padding: 0;
         min-height: 7rem;
         max-height: 7rem;
+
+        @media only screen and (min-width: 992px) {
+            min-height: 12rem;
+            max-height: 12rem;
+        }
         
         img {
             width: 100%;
@@ -67,5 +77,13 @@ $lines: 2;
         background: $color-7;
         right: 0;
         bottom: 0;
+
+        @media only screen and (min-width: 992px) {
+            height: 3.5px;
+            width: 100%;
+            background: $color-7;
+            right: 0;
+            bottom: 0;
+        }
     }
 }
