--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -11,5 +11,7 @@
 @import '../components/ItemDetailContainer/itemDetailContainer';
 @import '../components/ItemDetail/itemDetail';
 @import '../components/Spinner/spinner';
+@import '../components/CartWidget/cartWidget';
+
 
 
