--- a/src/components/CartWidget/_cartWidget.scss
+++ b/src/components/CartWidget/_cartWidget.scss
@@ -1,5 +1,11 @@
 .cartWidget {
     position: relative;
+    
+    .cartLink {
+        text-decoration: none;
+        color: white;
+        opacity: 0.8;
+    }
 
     .cartBadge {
         position: absolute;
