--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -12,6 +12,8 @@
 @import '../components/ItemDetail/itemDetail';
 @import '../components/Spinner/spinner';
 @import '../components/CartWidget/cartWidget';
+@import '../components/Cart/cart';
+@import '../components/Cart/CartItem/cartItem';
 
 
 
