--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -1,9 +1,9 @@
 @import '../../scss/base/colors';
 
 .cartView{
-    background: linear-gradient(to top, rgba($color-1, 0), rgba($color-5,1));
-    height: 100vh;
-    background-attachment:fixed;
+    // background: linear-gradient(to top, rgba($color-1, 0), rgba($color-5,1));
+    // height: 100vh;
+    // background-attachment:fixed;
 }
 
     
