--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -14,6 +14,7 @@
 @import '../components/CartWidget/cartWidget';
 @import '../components/Cart/cart';
 @import '../components/Cart/CartItem/cartItem';
+@import '../components/Cart/CartEmpty/cartEmpty';
 
 
 
