--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -1,14 +1,5 @@
 @import '../../scss/base/colors';
 
-.cartView{
-    // background: linear-gradient(to top, rgba($color-1, 0), rgba($color-5,1));
-    // height: 100vh;
-    // background-attachment:fixed;
-}
-
-    
-
-
 .clearCart {
     background: red;
     border: none;
@@ -19,12 +10,25 @@
 }
 
 .cartContainer {
-    // border: 1px solid gray;
-    // border-radius: 7px;
     display: grid;
     grid-gap: .85rem;
     grid-auto-flow: dense;
     grid-auto-rows:max-content;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+
+}
+
+.totalSum {
+    background: rgba($color-4, 0.5);
+    border-radius: 7px;
+    border: none;
+    box-shadow: .5px .5px 5px .5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    max-height: 8rem;
+    padding: 3px;
+    margin-top: 10px;
+    text-align: right;
+    font-size: 1rem;
+    font-weight: bold;
 
 }
