--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -1,21 +1,58 @@
 @import '../../scss/base/colors';
 
 .clearCart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: red;
     border: none;
-    border-radius: 50px;
+    border-radius: 7px;
     color: $color-0;
-    padding: 2px 7px;
-    font-size: 0.85rem;
+    padding: 10px 10px;
+    font-size: 1rem;
+    margin-right: .5rem;
+    width: 20%;
+    opacity: .5;
+
+    &:hover {
+        opacity: 1;
+    }
+
+    span {
+        font-size: 0.85rem;
+    }
+}
+.payCart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: green;
+    border: none;
+    border-radius: 7px;
+    color: $color-0;
+    padding: 5px 10px;
+    font-size: 1rem;
+    width: 80%;
+    text-decoration: none;
+
+    span {
+        margin-left: 0.5rem;
+    }
 }
 
 .cartContainer {
+    margin-top: 10px;
     display: grid;
     grid-gap: .85rem;
     grid-auto-flow: dense;
     grid-auto-rows:max-content;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 
+}
+
+.cartView {
+    height: calc(100vh);
+    margin-bottom: 60px;
 }
 
 .totalSum {
@@ -31,4 +68,10 @@
     font-size: 1rem;
     font-weight: bold;
 
+}
+
+.buttonsCart {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
