--- a/src/components/ItemDetailContainer/_itemDetailContainer.scss
+++ b/src/components/ItemDetailContainer/_itemDetailContainer.scss
@@ -2,6 +2,7 @@
     position: relative;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    margin-bottom: 50px;
 
     &::before {
         position: absolute;
