--- a/src/components/ItemDetail/_itemDetail.scss
+++ b/src/components/ItemDetail/_itemDetail.scss
@@ -2,21 +2,22 @@
     border-radius: 7px;
     overflow: hidden;
     border-radius: 7px;
-    background: rgba($color-1, 1);
-    // backdrop-filter: blur(5px);
+    background: white;
+    box-shadow: .5px .5px 5px .5px rgba(0, 0, 0, 0.2);
 
     .imgViewP {
         overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        height: 15rem;
+        min-height: 17rem;          
+        
     }
     .imgDetail {
-        width: 200px;
+        width: 100%;
     }
     .detailBody {
-        padding: 2rem;
+        padding: 1.5rem;
     }
 }
 .detailDescription {
@@ -30,9 +31,10 @@
     align-items: center;
     justify-content: center;
     border: none;
-    background: green;
+    background: $color-6;
     color: white;
     margin-top: 5px;
     vertical-align: middle;
     text-decoration: none;
+    font-size: 1rem;
 }
