--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -15,6 +15,7 @@
 @import '../components/Cart/cart';
 @import '../components/Cart/CartItem/cartItem';
 @import '../components/Cart/CartEmpty/cartEmpty';
+@import '../views/About/About';
 
 
 
