--- a/src/components/ItemList/_itemList.scss
+++ b/src/components/ItemList/_itemList.scss
@@ -11,7 +11,7 @@
     grid-gap: .85rem;
     grid-auto-flow: dense;
     grid-auto-rows:max-content;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
 
     
 }
