Entrega Final RJS

--- a/src/components/ItemCount/_itemCount.scss
+++ b/src/components/ItemCount/_itemCount.scss
@@ -47,6 +47,9 @@
         &:active {
             background: gray;
         }
+        &:hover {
+            color: rgb(176, 245, 176);
+        }
     }
 
 }
