--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -16,6 +16,8 @@
 @import '../components/Cart/CartItem/cartItem';
 @import '../components/Cart/CartEmpty/cartEmpty';
 @import '../views/About/About';
+@import '../components/Pay/PayComponents/form';
+@import '../components/MediosDePago/mediadepago'
 
 
 
