--- a/src/components/ItemDetail/_itemDetail.scss
+++ b/src/components/ItemDetail/_itemDetail.scss
@@ -4,13 +4,17 @@
     border-radius: 7px;
     background: white;
     box-shadow: .5px .5px 5px .5px rgba(0, 0, 0, 0.2);
+    
+    @media only screen and (min-width: 768px) {
+        padding: 1rem;
+    }
 
     .imgViewP {
         overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        min-height: 17rem;          
+        min-height: 17rem;
         
     }
     .imgDetail {
@@ -18,10 +22,129 @@
     }
     .detailBody {
         padding: 1.5rem;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+
+        h2 {
+            font-size: 1.5rem;
+            color: black;
+            order: 2;
+        }
+        p {
+            font-size: 1rem;
+
+            &:nth-child(1){
+                color: rgba($color-8, 0.7);
+                font-weight: 500;
+                letter-spacing: 1px;
+                margin: 0;
+            }
+
+
+            &:nth-child(3){
+                font-size: 2rem;
+                letter-spacing: 1px;
+                margin: 0;
+            }
+            &:nth-child(4){
+                font-size: 1rem;
+                margin: 0;
+                
+                span {
+                    color: green;
+                }
+            }
+            &:nth-child(5){
+                color: rgba($color-8, 0.9);
+            }
+        }
+
+        @media only screen and (min-width: 768px) {
+            border: 1px solid rgba($color-2, 0.7);
+            border-radius: 7px;
+
+            h2 {
+                font-size: 1.75rem;
+                color: black;
+                order: 2;
+            }
+            p {
+                font-size: 1rem;
+
+                &:nth-child(1){
+                    color: rgba($color-8, 0.7);
+                    font-weight: 500;
+                    letter-spacing: 1px;
+                    margin: 0;
+                }
+
+                &:nth-child(2){
+                    
+                }
+
+                &:nth-child(3){
+                    font-size: 2.5rem;
+                    letter-spacing: 1px;
+                    margin: 0;
+                }
+                &:nth-child(4){
+                    font-size: 1rem;
+                    margin: 0;
+                    
+                    span {
+                        color: green;
+                    }
+                }
+                &:nth-child(5){
+                    color: rgba($color-8, 0.9);
+                }
+            }
+
+            .detailPub {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                padding: 0.5rem;
+                margin-bottom: 30px;
+                border-radius: 7px;
+                background: white;
+                box-shadow: .5px .5px 5px .5px rgba(0, 0, 0, 0.2);
+                p {
+                    font-size: 1rem;
+                    color: rgba(black, 0.5);
+                    text-align: end;
+                    margin: 0;
+            
+                    span {
+                        text-transform: uppercase;
+                        font-weight: bold;
+            
+                    }
+                }
+            }
+        }
     }
 }
 .detailDescription {
     padding: 1rem;
+
+    h3 {
+        font-size: 1.5rem;
+    }
+
+    .dP {
+        padding-top: 1.5rem;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+    }
+
+    .mP {
+        padding: 1.5rem;
+        border: 1px solid rgba($color-2, 0.7);
+        border-radius: 7px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+    }
 }
 
 .finished{
@@ -37,4 +160,51 @@
     vertical-align: middle;
     text-decoration: none;
     font-size: 1rem;
+
+    &:hover {
+        color: rgb(176, 245, 176);
+    }
+}
+
+.mediosDePago {
+    margin-top: 1.5rem;
+
+    table {
+        td {
+            vertical-align: text-top;
+            padding: 0.5rem;
+            align-items: flex-start;
+            color: black;
+            
+            .iconMP {
+                color: green;
+            }
+
+            span {
+                color: green;
+            }
+        }
+    }
+}
+.detailPub {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0.5rem;
+    margin-bottom: 30px;
+    border-radius: 7px;
+    background: white;
+    box-shadow: .5px .5px 5px .5px rgba(0, 0, 0, 0.2);
+    p {
+        font-size: 1rem;
+        color: rgba(black, 0.5);
+        text-align: end;
+        margin: 0;
+
+        span {
+            text-transform: uppercase;
+            font-weight: bold;
+
+        }
+    }
 }
